<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="adUnitId">ca-app-pub-4235011035409184/4547377745</string>
	<string name="widgetZoneName">Trafficdroid - Tratta stradale</string>
	<string name="widgetStreetName">Trafficdroid - Strada intera</string>
	<string name="app_name">TrafficDroid</string>
	<string name="patenteQuiz">Quiz Patente</string>
	<string name="trueAns">Vero</string>
	<string name="falseAns">Falso</string>
	<string name="skip">Skip</string>
	<string name="retry">Sbagliato, prova ancora…</string>
	<string name="update">Aggiornamento…</string>
	<string name="setup">Imposta</string>
	<string name="info">Informazioni</string>
	<string name="patenteProvider">www.ilportaledellautomobilista.it</string>
	<string name="targaA">AB</string>
	<string name="targaB">123</string>
	<string name="targaC">CD</string>
	<string name="pedaggio">Pedaggio</string>
	<string name="bollo">Bollo</string>
	<string name="error">Errore</string>
	<string name="alcol">Etilometro</string>
	<string name="usr">Username</string>
	<string name="pwd">Password</string>
	<string name="map">Mappa</string>
	<string name="patente">Patente</string>
	<string name="adFreeButton">Rimuovi i banner in page</string>
	<string name="interstitialFreeButton">Rimuovi i banner in fullscreen</string>
	<string name="warning">Attenzione</string>
	<string name="webcamAdd">Questa Webcam non è ancora mappata, aiutaci a mapparla. Sul sito trovi tutte le informazioni. Richiesta di mappatura inoltrata.</string>
	<string name="webcamNone">Non esistono Webcam associabili a questa tratta. Se non è vero segnalalo sul sito.</string>
	<string name="settings">Impostazioni</string>
	<string name="refresh">Aggiorna</string>
	<string name="badConf">TrafficDroid ha bisogno di un provider per il traffico, vuoi inserire questa informazione ora o preferisci visualizzare maggiori informazioni?</string>
	<string name="selectStreet">Seleziona l\'intera strada</string>
	<string name="sniper">Seleziona le singole zone</string>
	<string name="diramation">Diramazioni</string>
	<string name="mappedSreet">Strade preferite</string>
	<string name="providerCategory">Provider</string>
	<string name="providerSummary">Verifica di averne i permessi</string>
	<string name="providerTrafficTitle">Servizio Traffico</string>
	<string name="providerTrafficKey">providerTrafficKeyFour</string>
	<string name="providerTrafficDefault">infoCELESTEtraffic.com</string>
	<string name="updateCategory">Opzioni</string>
	<string name="berserkTitle">Berserk</string>
	<string name="berserkKey">berserkKey</string>
	<string name="berserkSummary">Aggiorna i dati ad ogni visualizzazione</string>
	<string name="berserkDefault">true</string>
	<string name="chiaroveggenzaEnablerTitle">Chiaroveggenza</string>
	<string name="chiaroveggenzaEnablerKey">notificationEnablerKey</string>
	<string name="chiaroveggenzaEnablerSummary">Servizio di aggiornamento in background</string>
	<string name="chiaroveggenzaEnablerDefault">true</string>
	<string name="badnewsEnablerTitle">Bad-News</string>
	<string name="badnewsEnablerKey">badnewsEnablerKey</string>
	<string name="badnewsEnablerSummary">Visualizzare le Bad News</string>
	<string name="badnewsEnablerDefault">true</string>
	<string name="chiaroveggenzaTimeTitle">Intervallo di aggiornamento</string>
	<string name="chiaroveggenzaTimeKey">notificationTimeKey</string>
	<string name="chiaroveggenzaTimeSummary">Ogni quanto tempo aggiornare i dati</string>
	<string name="chiaroveggenzaTimeDefault">1800000</string>
	<string name="notificationTitle">Traffico rilevato in %1$s tratta/e</string>
	<string name="notificationSpeedTitle">Notifica se …</string>
	<string name="notificationSpeedKey">notificationSpeedKey</string>
	<string name="notificationSpeedSummary">Velocità massima per creare la notifica</string>
	<string name="notificationSpeedDefault">1</string>
	<string name="trendSpeedTitle">Mostra Trend se …</string>
	<string name="trendSpeedKey">trendSpeedKey</string>
	<string name="trendSpeedSummary">Variazione di velocità minima per mostrare l\'icona del trend</string>
	<string name="trendSpeedDefault">4</string>
	<string name="wrongData">Dati forniti non validi.</string>
	<string name="from">Casello di partenza</string>
	<string name="to">Casello di arrivo</string>
	<string name="allStreetsDefault">false</string>
	<string name="allStreetsKey">allStreetsKey</string>
	<string name="allStreetsSummary">Attenzione aumenta il consumo dati</string>
	<string name="allStreetsTitle">Tutte le Strade</string>
	<string name="autoveloxLeft">Autovelox sinistro</string>
	<string name="autoveloxRight">Autovelox destro</string>
	<string name="trendLeft">Trend sinistro</string>
	<string name="trendRight">Trend destro</string>
	<string name="webcam">Webcam stradale</string>
	<string name="patenteNumero">Numero Patente:</string>
	<string name="patenteScadenza">Scadenza Patente:</string>
	<string name="patenteSaldo">Saldo Punti:</string>
	<string name="RUN_UPDATE">it.localhost.trafficdroid.RUN_UPDATE</string>
	<string name="BEGIN_UPDATE">it.localhost.trafficdroid.BEGIN_UPDATE</string>
	<string name="END_UPDATE">it.localhost.trafficdroid.END_UPDATE</string>
	<string name="open_menu">Apri menu</string>
	<string name="close_menu">Chiudi menu</string>
</resources>