<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:gravity="center"
			android:text="@string/patenteProvider" />
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:orientation="horizontal"
			android:weightSum="3" >
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="2"
				android:orientation="vertical" >
				<EditText
					android:id="@+id/patenteUsr"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:hint="@string/usr"
					android:inputType="text" />
				<EditText
					android:id="@+id/patentePwd"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:hint="@string/pwd"
					android:inputType="textPassword" />
			</LinearLayout>
			<Button
				android:id="@id/ok"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_marginLeft="16dp"
				android:layout_marginStart="16dp"
				android:layout_weight="1"
				android:text="@string/patente" />
		</LinearLayout>
		<include layout="@layout/adview_medium_rectangle" />
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp" >
			<ProgressBar
				android:id="@+id/progress"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:indeterminate="true"
				android:visibility="gone" />
			<LinearLayout
				android:id="@+id/result"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone" >
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:weightSum="2" >
					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="end"
						android:text="@string/patenteNumero" />
					<TextView
						android:id="@+id/patenteNumero"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginStart="16dp"
						android:layout_weight="1"
						android:gravity="start"
						android:textStyle="bold" />
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:orientation="horizontal"
					android:weightSum="2" >
					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="end"
						android:text="@string/patenteScadenza" />
					<TextView
						android:id="@+id/patenteScadenza"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginStart="16dp"
						android:layout_weight="1"
						android:gravity="start"
						android:textStyle="bold" />
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:orientation="horizontal"
					android:weightSum="2" >
					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="end"
						android:text="@string/patenteSaldo" />
					<TextView
						android:id="@+id/patenteSaldo"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginStart="16dp"
						android:layout_weight="1"
						android:gravity="start"
						android:textStyle="bold" />
				</LinearLayout>
			</LinearLayout>
		</FrameLayout>
	</LinearLayout>
</ScrollView>