<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp" >
			<Spinner
				android:id="@+id/tipoVeicolo"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:entries="@array/tipoVeicoloValues" />
			<Spinner
				android:id="@+id/regioneResidenza"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="16dp"
				android:layout_marginStart="16dp"
				android:layout_weight="1"
				android:entries="@array/regioneResidenzaValues" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:weightSum="3" >
			<EditText
				android:id="@+id/targaA"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:hint="@string/targaA"
				android:imeOptions="actionNext"
				android:inputType="textCapCharacters|textNoSuggestions" />
			<EditText
				android:id="@+id/targaB"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="16dp"
				android:layout_marginStart="16dp"
				android:layout_weight="1"
				android:gravity="center"
				android:hint="@string/targaB"
				android:imeOptions="actionNext"
				android:inputType="number" />
			<EditText
				android:id="@+id/targaC"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="16dp"
				android:layout_marginStart="16dp"
				android:layout_weight="1"
				android:gravity="center"
				android:hint="@string/targaC"
				android:imeOptions="actionDone"
				android:inputType="textCapCharacters|textNoSuggestions" />
		</LinearLayout>
		<include layout="@layout/adview_medium_rectangle" />
		<Button
			android:id="@+id/ok"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@string/bollo" />
	</LinearLayout>
</ScrollView>